--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -1,392 +1,11 @@
-/* COMMON BEGIN */
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem;
-}
-
-.fluid-container {
-  height: calc(100vh - 1rem);
-  width: calc(100vw - 1rem);
-}
-
-.center-message {
-  height: 70vh;
-}
-
-.center-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.font-larger {
-  font-size: larger;
-}
-
-code {
-  color: red;
-}
-
-.tabsheader {
-  display: flex;
-  border-bottom: 1px solid lightgray;
-  height: 2.5rem;
-  margin-bottom: 0.4rem;
-}
-
-.tabheader {
-  padding: 0 10px;
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-.tabheader.active {
-  border-bottom: 3px solid dodgerblue;
-  font-weight: bold;
-}
-
-.d-flex {
-  display: flex;
-}
-
-.space-between {
-  justify-content: space-between;
-}
-
-.spinner {
-  border: 4px solid lightgrey;
-  border-top: 4px solid dodgerblue;
-  border-radius: 50%;
-  width: 1.5rem;
-  height: 1.5rem;
-  animation: spin 2s linear infinite;
-  margin-right: 0.5rem;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.filter-form-container {
-  margin-bottom: 1rem;
-}
-/* COMMON END */
-
-/* MISSING EXECUTABLES BEGIN */
-#missing-executables table {
-  border-collapse: collapse;
-}
-
-#missing-executables tr {
-  border-bottom: 1px solid lightgrey;
-}
-
-#missing-executables td {
-  padding: 0.8rem;
-}
-/* MISSING EXECUTABLES END */
-
-/* LAYOUT BEGIN */
-#layout {
-  display: grid;
-  grid-template-rows: 3rem auto;
-  grid-template-areas:
-    'header'
-    'content';
-}
-
-#header {
-  grid-area: header;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 2rem;
-}
-
-#logo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#logo img {
-  margin-right: 0.7rem;
-}
-
-#navlinks a {
-  padding: 0.5rem;
-}
-
-.navlink.active {
-  font-weight: bold;
-}
-
-#navoperations button {
-  margin: 0 0.5rem;
-  height: 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-
-#content {
-  grid-area: content;
-  margin-top: 2rem;
-  width: calc(100vw - 2rem);
-  margin-left: auto;
-  margin-right: auto;
-}
-/* LAYOUT END */
-
-/* HOME BEGIN */
-#controlbar {
-  margin-bottom: 5px;
-}
-
-#controlbar .width75 {
-  flex: 3;
-  padding-right: 0.2rem;
-}
-
-#controlbar .width25 {
-  padding-left: 0.2rem;
-  flex: 1;
-}
-
-#controlbar .me-2 {
-  margin-right: 0.6rem;
-}
-
-#homecontent {
-  width: 100%;
-  display: flex;
-}
-
-#homecontent .width75 {
-  flex: 3;
-  padding-right: 0.2rem;
-  display: flex;
-  align-items: flex-start;
-}
-
-#homecontent .width25 {
-  flex: 1;
-  padding-left: 0.2rem;
-  display: flex;
-}
-
-#homecontent img {
-  object-fit: contain;
-  width: 100%;
-}
-/* HOME END */
-
-/* IMAGE SLIDER BEGIN */
-.slider {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-}
-
-.slide {
-  opacity: 0;
-}
-
-.slide.active {
-  opacity: 1;
-}
-/* IMAGE SLIDER END */
-
-/* VIDEO PLAYER BEGIN */
-#videoplayer {
-  width: 100%;
-  height: 100%;
-}
-/* VIDEO PLAYER END */
-
-/* CHECKBOXGROUPS BEGIN */
-.checkboxgroup {
-  flex-grow: 1;
-  flex-basis: 0;
-}
-
-.checkboxgroup-header,
-.checkboxgroup-items {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.checkboxgroup-heading {
-  font-size: 1.5rem;
-  font-weight: lighter;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-#checkboxgroups input[type='checkbox'] {
-  margin-right: 0.5rem;
-}
-
-.checkboxgroup-filter {
-  margin: 0.5rem;
-}
-
-.checkboxgroups-save-button {
-  flex-grow: 1;
-  flex-basis: 0;
-  display: flex;
-  align-items: start;
-}
-.checkboxgroups-save-button button {
-  margin: 0.5rem;
-  margin-top: 2rem;
-  font-size: 1.5rem;
-}
-/* CHECKBOXGROUPS END */
-
-/* VIDEO BEGIN */
-.video-page-heading,
-.video-page-heading h4 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.video-page-player-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.video-page-player {
-  display: flex;
-  width: 90%;
-  justify-content: center;
-}
-
-.video-page-tgp-container {
-  display: flex;
-  justify-content: center;
-}
-
-.video-page-tgp-container img {
-  width: 90%;
-}
-
-.videos-inputui {
-  display: flex;
-  justify-content: space-between;
-}
-
-.videos-inputui button {
-  margin-right: 1rem;
-}
-
-.videos-table {
-  margin-top: 1rem;
-}
-
-.videos-table th,
-.videos-table td {
-  padding: 0.3rem;
-  text-align: center;
-}
-/* VIDEO END */
-
-/* GALLERY BEGIN */
-.gallery-input-content {
-  margin: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-.gallery-operations-container button {
-  margin-right: 0.5rem;
-}
-
-.galleries-table th,
-.galleries-table td {
-  padding: 0.3rem;
-  text-align: center;
-}
-
-.galleries-table th {
-  font-weight: normal;
-}
-
-.gallery-page-heading,
-.gallery-page-heading h4 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-}
-
-.gallery-page-content {
-  display: flex;
-}
-
-.gallery-page-content > div {
-  flex-grow: 1;
-  flex-basis: 0;
-}
-/* GALLERY END */
-
-/* TAG BEGIN */
-.tag-badge {
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  color: white;
-  background-color: black;
-  display: flex;
-  align-items: center;
-}
-
-.tag-badge p {
-  cursor: pointer;
   margin: 0;
-  margin-right: 1rem;
-  margin-top: 0;
-  margin-bottom: 0.2rem;
 }
 
-.tag-badge-container {
-  flex-wrap: wrap;
+.ant-tabs-nav {
+  margin-bottom: 0.4rem !important;
 }
-
-.add-tags-form input {
-  margin-right: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 0.4rem;
-}
-
-.tag-page-heading,
-.tag-page-heading h4 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-}
-
-/* TAG END */
